5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/222/users/4066/executions/1760_1577.log
== TEST (2019-05-29 10:46:28) 
-- CODE:
from numpy import *

a = float(input("Aceleracao: "))
v0 = float(input("Velocidade incial: "))
N = int(input("N: "))

t = arange(N)

print(t)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:46:58) 
-- CODE:
from numpy import *

a = float(input("Aceleracao: "))
v0 = float(input("Velocidade incial: "))
N = int(input("N: "))

t = arange(N)

d = zeros(N)

print(t, d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:49:16) 
-- CODE:
from numpy import *

a = float(input("Aceleracao: "))
v0 = float(input("Velocidade incial: "))
N = int(input("N: "))

t = arange(N)

d = zeros(N)

i = 0

while (i < N):
	ti = t[i]
	dti = (a*(t**2)/2) + v0*ti
	di = d[i] + dti
	print(di)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:49:33) 
-- CODE:
from numpy import *

a = float(input("Aceleracao: "))
v0 = float(input("Velocidade incial: "))
N = int(input("N: "))

t = arange(N)

d = zeros(N)

i = 0

while (i < N):
	ti = t[i]
	dti = (a*(t**2)/2) + v0*ti
	di = d[i] + dti
	print(di)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:50:49) 
-- CODE:
from numpy import *

a = float(input("Aceleracao: "))
v0 = float(input("Velocidade incial: "))
N = int(input("N: "))

t = arange(N)

d = zeros(N)

i = 0

while (i < N):
	ti = t[i]
	dti = (a*(t**2)/2) + v0*ti
	di = d[i] + dti
	i = i + 1
	print(di)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:51:53) 
-- CODE:
from numpy import *

a = float(input("Aceleracao: "))
v0 = float(input("Velocidade incial: "))
N = int(input("N: "))

t = arange(N)

d = zeros(N)

i = 0

while (i < N):
	ti = t[i]
	dti = (a*(t**2)/2) + v0*ti
	di = d[i] + dti
	i = i + 1
	print(di)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:52:18) 
-- CODE:
from numpy import *

a = float(input("Aceleracao: "))
v0 = float(input("Velocidade incial: "))
N = int(input("N: "))

t = arange(N)

d = zeros(N)

i = 0

while (i < N):
	ti = t[i]
	dti = (a*(t**2)/2) + v0*ti
	di = d[i] + dti
	i = i + 1
print(di)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:52:24) 
-- CODE:
from numpy import *

a = float(input("Aceleracao: "))
v0 = float(input("Velocidade incial: "))
N = int(input("N: "))

t = arange(N)

d = zeros(N)

i = 0

while (i < N):
	ti = t[i]
	dti = (a*(t**2)/2) + v0*ti
	di = d[i] + dti
	i = i + 1
print(di)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 10:52:42) 
-- CODE:
from numpy import *

a = float(input("Aceleracao: "))
v0 = float(input("Velocidade incial: "))
N = int(input("N: "))

t = arange(N)

d = zeros(N)

i = 1

while (i < N):
	ti = t[i]
	dti = (a*(t**2)/2) + v0*ti
	di = d[i] + dti
	i = i + 1
print(di)
-- EXECUTION TIME:
0.516244
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[ 37.4  38.   39.8  42.8  47.   52.4  59.   66.8  75.8  86.   97.4 110. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[ 3213.   3217.9  3232.6  3257.1  3291.4  3335.5  3389.4  3453.1  3526.6
  3609.9  3703.   3805.9  3918.6  4041.1  4173.4  4315.5  4467.4  4629.1
  4800.6  4981.9  5173.   5373.9  5584.6  5805.1  6035.4  6275.5  6525.4
  6785.1  7054.6  7333.9  7623.   7921.9  8230.6  8549.1  8877.4  9215.5
  9563.4  9921.1 10288.6 10665.9 11053.  11449.9 11856.6]
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:52:46) 
-- CODE:
from numpy import *

a = float(input("Aceleracao: "))
v0 = float(input("Velocidade incial: "))
N = int(input("N: "))

t = arange(N)

d = zeros(N)

i = v0

while (i < N):
	ti = t[i]
	dti = (a*(t**2)/2) + v0*ti
	di = d[i] + dti
	i = i + 1
print(di)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:52:57) 
-- CODE:
from numpy import *

a = float(input("Aceleracao: "))
v0 = float(input("Velocidade incial: "))
N = int(input("N: "))

t = arange(N)

d = zeros(N)

i = 1

while (i < N):
	ti = t[i]
	dti = (a*(t**2)/2) + v0*ti
	di = d[i] + dti
	i = i + 1
print(di)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:53:10) 
-- CODE:
from numpy import *

a = float(input("Aceleracao: "))
v0 = float(input("Velocidade incial: "))
N = int(input("N: "))

t = arange(N)

d = zeros(N)

i = 

while (i < N):
	ti = t[i]
	dti = (a*(t**2)/2) + v0*ti
	di = d[i] + dti
	i = i + 1
print(di)
-- ERROR:
File "XXXX", line 11
    i = 
       ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:53:52) 
-- CODE:
from numpy import *

a = float(input("Aceleracao: "))
v0 = float(input("Velocidade incial: "))
N = int(input("N: "))

t = arange(N)

d = zeros(N)

i = 0

while (i < N):
	ti = t[i]
	dti = (a*(t**2)/2) + v0*ti
	di = d[i] + dti
	i = i + 1
print(di)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:54:11) 
-- CODE:
from numpy import *

a = float(input("Aceleracao: "))
v0 = float(input("Velocidade incial: "))
N = int(input("N: "))

t = arange(N)

d = zeros(N)

i = 0

while (i < N):
	ti = t[i]
	dti = (a*(t**2)/2) + v0*ti
	di = d[i] + dti
	i = i + 1
print(di)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:54:17) 
-- CODE:
from numpy import *

a = float(input("Aceleracao: "))
v0 = float(input("Velocidade incial: "))
N = int(input("N: "))

t = arange(N)

d = zeros(N)

i = 0

while (i < N):
	ti = t[i]
	dti = (a*(t**2)/2) + v0*ti
	di = d[i] + dti
	i = i + 1
print(di)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:54:57) 
-- CODE:
from numpy import *

a = float(input("Aceleracao: "))
v0 = float(input("Velocidade incial: "))
N = int(input("N: "))

t = arange(N)

d = zeros(N)

i = 0

while (i < N):
	ti = t[i]
	dti = (a*(t**2)/2) + v0*ti
	di = d[i] + dti
	i = i + 1
	print(ti, dti)
print(di)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:55:57) 
-- CODE:
from numpy import *

a = float(input("Aceleracao: "))
v0 = float(input("Velocidade incial: "))
N = int(input("N: "))

t = arange(N)

d = zeros(N)

i = 0

while (i < N):
	ti = t[i]
	dti = (a*(ti**2)/2) + v0*ti
	di = d[i] + dti
	i = i + 1
	print(ti, dti)
print(di)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:56:13) 
-- CODE:
from numpy import *

a = float(input("Aceleracao: "))
v0 = float(input("Velocidade incial: "))
N = int(input("N: "))

t = arange(N)

d = zeros(N)

i = 0

while (i < N):
	ti = t[i]
	dti = (a*(ti**2)/2) + v0*ti
	di = d[i] + dti
	i = i + 1
print(di)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:56:48) 
-- CODE:
from numpy import *

a = float(input("Aceleracao: "))
v0 = float(input("Velocidade incial: "))
N = int(input("N: "))

t = arange(N)

d = zeros(N)

i = 0

while (i < N):
	ti = t[i]
	dti = (a*(ti**2)/2) + v0*ti
	di = d[i] + dti
	i = i + 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:57:10) 
-- CODE:
from numpy import *

a = float(input("Aceleracao: "))
v0 = float(input("Velocidade incial: "))
N = int(input("N: "))

t = arange(N)

d = zeros(N)

i = 0

while (i < N):
	ti = t[i]
	dti = (a*(ti**2)/2) + v0*ti
	d[i] = d[i] dti
	i = i + 1
print(d)
-- ERROR:
File "XXXX", line 16
    d[i] = d[i] dti
                  ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-05-29 10:57:38) 
-- CODE:
from numpy import *

a = float(input("Aceleracao: "))
v0 = float(input("Velocidade incial: "))
N = int(input("N: "))

t = arange(N)

d = zeros(N)

i = 0

while (i < N):
	ti = t[i]
	dti = (a*(ti**2)/2) + v0*ti
	d[i] = d[i] + dti
	i = i + 1
print(d)
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import *
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-05-29 10:57:44) 
-- CODE:
from numpy import *

a = float(input("Aceleracao: "))
v0 = float(input("Velocidade incial: "))
N = int(input("N: "))

t = arange(N)

d = zeros(N)

i = 0

while (i < N):
	ti = t[i]
	dti = (a*(ti**2)/2) + v0*ti
	d[i] = d[i] + dti
	i = i + 1
print(d)
-- EXECUTION TIME:
0.4447
-- TEST CASE 1:
---- input:
1.2
3.4
12
---- correct output:
[   0.     4.     9.2   15.6   23.2   32.    42.    53.2   65.6   79.2
   94.   110. ]
---- user output:
[  0.    4.    9.2  15.6  23.2  32.   42.   53.2  65.6  79.2  94.  110. ]
-- TEST CASE 2:
---- input:
9.8
76.5
43
---- correct output:
[     0.      81.4    172.6    273.6    384.4    505.     635.4    775.6
    925.6   1085.4   1255.    1434.4   1623.6   1822.6   2031.4   2250.
   2478.4   2716.6   2964.6   3222.4   3490.    3767.4   4054.6   4351.6
   4658.4   4975.    5301.4   5637.6   5983.6   6339.4   6705.    7080.4
   7465.6   7860.6   8265.4   8680.    9104.4   9538.6   9982.6  10436.4
  10900.   11373.4  11856.6]
---- user output:
[    0.     81.4   172.6   273.6   384.4   505.    635.4   775.6   925.6
  1085.4  1255.   1434.4  1623.6  1822.6  2031.4  2250.   2478.4  2716.6
  2964.6  3222.4  3490.   3767.4  4054.6  4351.6  4658.4  4975.   5301.4
  5637.6  5983.6  6339.4  6705.   7080.4  7465.6  7860.6  8265.4  8680.
  9104.4  9538.6  9982.6 10436.4 10900.  11373.4 11856.6]
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
